// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectToStore test suite it initial render 1`] = `
<div>
  iflux-native
</div>
`;

exports[`connectToStore test suite it initial render 2`] = `
<div>
  iflux2
</div>
`;
